First commited as before_2007_rev1